<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    tools:context=".Fragment2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/question1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/win11" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:button="@drawable/icon_winxp"
                android:text="@string/winXP"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:button="@drawable/icon_win7"
                android:text="@string/win7"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:button="@drawable/icon_win810"
                android:text="@string/win8"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:button="@drawable/icon_win810"
                android:text="@string/win10"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:button="@drawable/icon_win11"
                android:text="@string/win11"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bg"
                android:text="@string/назад"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bg"
                android:text="@string/далее"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>